small alignment fix
- mainly fixed the alignment between stakeholders and company-summary, also changed shadow position and h3 instead of h2 on stakeholder names

--- a/public/styles/dashboard.css
+++ b/public/styles/dashboard.css
@@ -72,20 +72,22 @@ header {
 }
 
 .stakeholders-list {
+    display: block;
     grid-area: stakeholder;
-    margin-left: 2em;
-
-    h2{ margin-left: 2em;   text-transform: uppercase; }
+    margin: auto;
+    width: 75%;
+    padding: 1.5em;
+    h2{ text-transform: uppercase; }
 
 .stakeholder{
     display: inline-block;
     position: relative;
-    margin: 8px;
+    margin: 4px;
     box-shadow: var(--shadow);
     border-radius: var(--object-radius);
     padding: 16px;
-    width: 300px;
-    height: 300px;
+    width: 275px;
+    height: 275px;
     overflow: hidden;
 
     .stakeholder-background{
